--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,10 @@
         "php": ">=5.5.0",
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "TestingStuff\\": "src/"
+        }
     }
 }
